--- a/code/route53/healthChecks/alb-health-check.yaml
+++ b/code/route53/healthChecks/alb-health-check.yaml
@@ -3,6 +3,8 @@ AWSTemplateFormatVersion: 2010-09-09
 Parameters:
   resourceArn:
       Type: String
+  resourceId:
+    Type: String
   probeFQDN:
       Type: String
       Description: DNS name for ALB, this can be a custom DNS name or the AWS provided name
@@ -150,8 +152,8 @@ Resources:
         Namespace: AWS/DDoSProtection
         Statistic: Sum
         Dimensions:
-        - Name: ResourceArn
-          Value: !Ref resourceArn
+          - Name: ResourceArn
+            Value: !Ref resourceArn
         Period: 60
         EvaluationPeriods: 20
         DatapointsToAlarm: 1
@@ -165,11 +167,11 @@ Resources:
           Type: CLOUDWATCH_METRIC
           AlarmIdentifier:
             Region: !Ref AWS::Region
-            Name: !Ref Alarm1
+            Name: !Ref Alarm01
         HealthCheckTags:
         - Key: Name
-          Value: !Join ["-", [!Ref Metric1Name, !Select [3,!Split ["/",!Ref resourceArn]]]]
-    Alarm1:
+          Value: !Join ["_", [!Ref Metric1Name, !Select [3,!Split ["/",!Ref resourceArn]]]]
+    Alarm01:
       Type: AWS::CloudWatch::Alarm
       Metadata:
         cfn_nag:
@@ -185,8 +187,15 @@ Resources:
         Namespace: AWS/ApplicationELB
         Statistic: !Ref Metric1Statistic
         Dimensions:
-        - Name: ResourceArn
-          Value: !Ref resourceArn
+        - Name: LoadBalancer
+          Value: !Join
+            - ''
+            - - !Select [1,!Split [ "/" , !Ref resourceArn]]
+              - "/"
+              - !Select [2,!Split [ "/" , !Ref resourceArn]]
+              - "/"
+              - !Select [3,!Split ["/" , !Ref resourceArn]]
+
         Period: 60
         EvaluationPeriods: 20
         DatapointsToAlarm: 1
@@ -200,11 +209,11 @@ Resources:
           Type: CLOUDWATCH_METRIC
           AlarmIdentifier:
             Region: !Ref AWS::Region
-            Name: !Ref Alarm2
+            Name: !Ref Alarm02
         HealthCheckTags:
         - Key: Name
           Value: !Join ["-", [!Ref Metric2Name, !Select [3,!Split ["/",!Ref resourceArn]]]]
-    Alarm2:
+    Alarm02:
       Type: AWS::CloudWatch::Alarm
       Metadata:
         cfn_nag:
@@ -212,7 +221,7 @@ Resources:
             - id: W28
               reason: "Alarm has a dynamically generated name unique per resources"
       Properties:
-        AlarmName: !Join ["-", [!Ref Metric2Name, !Select [3,!Split ["/",!Ref resourceArn]]]]
+        AlarmName: !Join ["_", [!Ref Metric2Name, !Select [3,!Split ["/",!Ref resourceArn]]]]
         ActionsEnabled: True
         AlarmActions:
         - !If [AlarmActionFlag, !Ref SNSTopicNotifications, !Ref "AWS::NoValue"]
@@ -220,8 +229,14 @@ Resources:
         Namespace: AWS/ApplicationELB
         Statistic: !Ref Metric2Statistic
         Dimensions:
-        - Name: ResourceArn
-          Value: !Ref resourceArn
+          - Name: LoadBalancer
+            Value: !Join
+              - ''
+              - - !Select [1,!Split [ "/" , !Ref resourceArn]]
+                - "/"
+                - !Select [2,!Split [ "/" , !Ref resourceArn]]
+                - "/"
+                - !Select [3,!Split ["/" , !Ref resourceArn]]
         Period: 60
         EvaluationPeriods: 20
         DatapointsToAlarm: 1
@@ -235,11 +250,11 @@ Resources:
           Type: CLOUDWATCH_METRIC
           AlarmIdentifier:
             Region: !Ref AWS::Region
-            Name: !Ref Alarm3
+            Name: !Ref Alarm03
         HealthCheckTags:
         - Key: Name
           Value: !Join ["-", [!Ref Metric3Name, !Select [3,!Split ["/",!Ref resourceArn]]]]
-    Alarm3:
+    Alarm03:
       Type: AWS::CloudWatch::Alarm
       Metadata:
         cfn_nag:
@@ -247,7 +262,7 @@ Resources:
             - id: W28
               reason: "Alarm has a dynamically generated name unique per resources"
       Properties:
-        AlarmName: !Join ["-", [!Ref Metric3Name, !Select [3,!Split ["/",!Ref resourceArn]]]]
+        AlarmName: !Join ["_", [!Ref Metric3Name, !Select [3,!Split ["/",!Ref resourceArn]]]]
         ActionsEnabled: True
         AlarmActions:
         - !If [AlarmActionFlag, !Ref SNSTopicNotifications, !Ref "AWS::NoValue"]
@@ -255,8 +270,14 @@ Resources:
         Namespace: AWS/ApplicationELB
         Statistic: !Ref Metric3Statistic
         Dimensions:
-        - Name: ResourceArn
-          Value: !Ref resourceArn
+          - Name: LoadBalancer
+            Value: !Join
+              - ''
+              - - !Select [1,!Split [ "/" , !Ref resourceArn]]
+                - "/"
+                - !Select [2,!Split [ "/" , !Ref resourceArn]]
+                - "/"
+                - !Select [3,!Split ["/" , !Ref resourceArn]]
         Period: 60
         EvaluationPeriods: 20
         DatapointsToAlarm: 1
@@ -280,6 +301,11 @@ Resources:
           Value: !Join ["-", ["Probe", !Select [3,!Split ["/",!Ref resourceArn]]]]
     CalculatedHealthCheck:
       Type: 'AWS::Route53::HealthCheck'
+      DependsOn:
+        - Metric1HealthCheck
+        - Metric2HealthCheck
+        - Metric3HealthCheck
+        - ProbeHealthCheck
       Properties:
         HealthCheckConfig:
           Type: CALCULATED
@@ -292,6 +318,14 @@ Resources:
         HealthCheckTags:
         - Key: Name
           Value: !Join ["-", ["CalculatedHC", !Select [3,!Split ["/",!Ref resourceArn]]]]
+    ShieldAssociation:
+      Type: Custom::ShieldProtectionHealthCheck
+      DependsOn:
+        - CalculatedHealthCheck
+      Properties:
+        ServiceToken: !ImportValue Route53ShieldProtectionManageLambdaFunctionArn
+        ResourceArn: !Ref resourceArn
+        CalculatedHCId: !Ref CalculatedHealthCheck
 Outputs:
   CalculatedHealthCheckId:
     Value: !Ref CalculatedHealthCheck
